// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Navigation should correctly render amp navigation 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-1.si-nav-open {
    background-color: #222222;
  }
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-6::-webkit-scrollbar {
    display: none;
  }

  .emotion-6:focus-visible {
    outline: none;
  }

  .emotion-6:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }

  .emotion-6[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

.emotion-6.emotion-6::after {
  background: none;
}

.emotion-7 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    overflow: hidden;
  }
}

.emotion-8 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-8::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-9 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-9:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-9:focus::after,
.emotion-9:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-10::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-11 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-14 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-14 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-14:hover,
.emotion-14:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-14:hover::after,
.emotion-14:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-15 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-15 {
    fill: linkText;
  }
}

.emotion-20 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    display: none;
    visibility: hidden;
  }
}

.emotion-21 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-22 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-22:last-child {
  border: 0;
}

.emotion-23 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-23 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-23 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-23:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-23::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-23:hover::before {
  opacity: 1;
}

.emotion-23:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-24 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-25.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-25 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-25::-webkit-scrollbar {
    display: none;
  }

  .emotion-25:focus-visible {
    outline: none;
  }

  .emotion-25:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-25::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-25::after {
      width: 6rem;
    }
  }

  .emotion-25[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-25 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-25 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-25 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-25 li:last-child:before {
  display: none;
}

.emotion-27 {
  position: relative;
}

.emotion-27::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-7"
                role="list"
              >
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    aria-label="Home"
                    class="focusIndicatorRemove emotion-9"
                    data-active="true"
                    href="/news"
                  >
                    <span
                      class="emotion-10"
                      id="NavigationLinks-Home"
                      role="text"
                    >
                      <span
                        class="emotion-11"
                      >
                        Current page, 
                      </span>
                      Home
                    </span>
                  </a>
                </li>
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-9"
                    href="/about"
                  >
                    About
                  </a>
                </li>
              </ul>
            </div>
            <amp-state
              id="menuState"
            >
              <script
                type="application/json"
              >
                {"expanded":false}
              </script>
            </amp-state>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-14"
              data-amp-bind-aria-expanded="menuState.expanded ? "true" : "false""
              dir="ltr"
              on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
              si-nav-dropdown-menu.toggleVisibility,
              si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
              si-nav.toggleClass(class=si-nav-open)
            "
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-15 emotion-16"
                data-amp-bind-hidden="menuState.expanded"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="emotion-15 emotion-16"
                data-amp-bind-hidden="!menuState.expanded"
                focusable="false"
                height="2.75rem"
                hidden=""
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="emotion-11"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-20"
            data-e2e="dropdown-nav"
            hidden=""
            id="si-nav-dropdown-menu"
          >
            <ul
              class="emotion-21"
              role="list"
            >
              <li
                class="emotion-22"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-23"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-24"
        >
          <div
            class="emotion-25"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
            id="si-nav-scrollable"
          >
            <ul
              class="emotion-7"
              role="list"
            />
          </div>
        </div>
      </div>
      <div
        class="emotion-27"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render amp navigation on a URL not associated with navigation items 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-1.si-nav-open {
    background-color: #222222;
  }
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-6::-webkit-scrollbar {
    display: none;
  }

  .emotion-6:focus-visible {
    outline: none;
  }

  .emotion-6:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }

  .emotion-6[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

.emotion-6.emotion-6::after {
  background: none;
}

.emotion-7 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    overflow: hidden;
  }
}

.emotion-8 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-8::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-9 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-9:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-9:focus::after,
.emotion-9:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-12 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-12 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-12 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-12:hover,
.emotion-12:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-12:hover::after,
.emotion-12:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-13 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-13 {
    fill: linkText;
  }
}

.emotion-17 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-18 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    display: none;
    visibility: hidden;
  }
}

.emotion-19 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-20 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-20:last-child {
  border: 0;
}

.emotion-21 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-21:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-21:hover::before {
  opacity: 1;
}

.emotion-21:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-22 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-23.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-23 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-23::-webkit-scrollbar {
    display: none;
  }

  .emotion-23:focus-visible {
    outline: none;
  }

  .emotion-23:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-23::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-23::after {
      width: 6rem;
    }
  }

  .emotion-23[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-23 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-23 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-23 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-23 li:last-child:before {
  display: none;
}

.emotion-25 {
  position: relative;
}

.emotion-25::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-7"
                role="list"
              >
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-9"
                    href="/news"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-9"
                    href="/about"
                  >
                    About
                  </a>
                </li>
              </ul>
            </div>
            <amp-state
              id="menuState"
            >
              <script
                type="application/json"
              >
                {"expanded":false}
              </script>
            </amp-state>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-12"
              data-amp-bind-aria-expanded="menuState.expanded ? "true" : "false""
              dir="ltr"
              on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
              si-nav-dropdown-menu.toggleVisibility,
              si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
              si-nav.toggleClass(class=si-nav-open)
            "
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-13 emotion-14"
                data-amp-bind-hidden="menuState.expanded"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="emotion-13 emotion-14"
                data-amp-bind-hidden="!menuState.expanded"
                focusable="false"
                height="2.75rem"
                hidden=""
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="emotion-17"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-18"
            data-e2e="dropdown-nav"
            hidden=""
            id="si-nav-dropdown-menu"
          >
            <ul
              class="emotion-19"
              role="list"
            >
              <li
                class="emotion-20"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-21"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-22"
        >
          <div
            class="emotion-23"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
            id="si-nav-scrollable"
          >
            <ul
              class="emotion-7"
              role="list"
            />
          </div>
        </div>
      </div>
      <div
        class="emotion-25"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render amp navigation on non-home navigation page 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-1.si-nav-open {
    background-color: #222222;
  }
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-6::-webkit-scrollbar {
    display: none;
  }

  .emotion-6:focus-visible {
    outline: none;
  }

  .emotion-6:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }

  .emotion-6[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

.emotion-6.emotion-6::after {
  background: none;
}

.emotion-7 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    overflow: hidden;
  }
}

.emotion-8 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-8::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-9 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-9:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-9:focus::after,
.emotion-9:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-12::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-13 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-14 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-14 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-14:hover,
.emotion-14:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-14:hover::after,
.emotion-14:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-15 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-15 {
    fill: linkText;
  }
}

.emotion-20 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    display: none;
    visibility: hidden;
  }
}

.emotion-21 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-22 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-22:last-child {
  border: 0;
}

.emotion-23 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-23 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-23 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-23:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-23::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-23:hover::before {
  opacity: 1;
}

.emotion-23:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-24 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-25.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-25 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-25::-webkit-scrollbar {
    display: none;
  }

  .emotion-25:focus-visible {
    outline: none;
  }

  .emotion-25:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-25::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-25::after {
      width: 6rem;
    }
  }

  .emotion-25[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-25 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-25 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-25 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-25 li:last-child:before {
  display: none;
}

.emotion-27 {
  position: relative;
}

.emotion-27::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-7"
                role="list"
              >
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-9"
                    href="/news"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    aria-label="About"
                    class="focusIndicatorRemove emotion-9"
                    data-active="true"
                    href="/about"
                  >
                    <span
                      class="emotion-12"
                      id="NavigationLinks-About"
                      role="text"
                    >
                      <span
                        class="emotion-13"
                      >
                        Current page, 
                      </span>
                      About
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <amp-state
              id="menuState"
            >
              <script
                type="application/json"
              >
                {"expanded":false}
              </script>
            </amp-state>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-14"
              data-amp-bind-aria-expanded="menuState.expanded ? "true" : "false""
              dir="ltr"
              on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
              si-nav-dropdown-menu.toggleVisibility,
              si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
              si-nav.toggleClass(class=si-nav-open)
            "
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-15 emotion-16"
                data-amp-bind-hidden="menuState.expanded"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="emotion-15 emotion-16"
                data-amp-bind-hidden="!menuState.expanded"
                focusable="false"
                height="2.75rem"
                hidden=""
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="emotion-13"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-20"
            data-e2e="dropdown-nav"
            hidden=""
            id="si-nav-dropdown-menu"
          >
            <ul
              class="emotion-21"
              role="list"
            >
              <li
                class="emotion-22"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-23"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-24"
        >
          <div
            class="emotion-25"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
            id="si-nav-scrollable"
          >
            <ul
              class="emotion-7"
              role="list"
            />
          </div>
        </div>
      </div>
      <div
        class="emotion-27"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render canonical navigation 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-6::-webkit-scrollbar {
    display: none;
  }

  .emotion-6:focus-visible {
    outline: none;
  }

  .emotion-6:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }

  .emotion-6[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

.emotion-6.emotion-6::after {
  background: none;
}

.emotion-7 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    overflow: hidden;
  }
}

.emotion-8 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-8::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-9 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-9:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-9:focus::after,
.emotion-9:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-10::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-11 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-14 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-14 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-14:hover,
.emotion-14:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-14:hover::after,
.emotion-14:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-15 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-15 {
    fill: linkText;
  }
}

.emotion-18 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-18 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-19 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-20 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-20:last-child {
  border: 0;
}

.emotion-21 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-21:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-21:hover::before {
  opacity: 1;
}

.emotion-21:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-22 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-23.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-23 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-23::-webkit-scrollbar {
    display: none;
  }

  .emotion-23:focus-visible {
    outline: none;
  }

  .emotion-23:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-23::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-23::after {
      width: 6rem;
    }
  }

  .emotion-23[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-23 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-23 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-23 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-23 li:last-child:before {
  display: none;
}

.emotion-25 {
  position: relative;
}

.emotion-25::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-7"
                role="list"
              >
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    aria-label="Home"
                    class="focusIndicatorRemove emotion-9"
                    data-active="true"
                    href="/news"
                  >
                    <span
                      class="emotion-10"
                      id="NavigationLinks-Home"
                      role="text"
                    >
                      <span
                        class="emotion-11"
                      >
                        Current page, 
                      </span>
                      Home
                    </span>
                  </a>
                </li>
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-9"
                    href="/about"
                  >
                    About
                  </a>
                </li>
              </ul>
            </div>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-14"
              dir="ltr"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-15 emotion-16"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <span
                class="emotion-11"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-18"
            data-e2e="dropdown-nav"
            style="height: 0px;"
          >
            <ul
              class="emotion-19"
              role="list"
            >
              <li
                class="emotion-20"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-21"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-22"
        >
          <div
            class="emotion-23"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
          >
            <ul
              class="emotion-7"
              role="list"
            />
          </div>
        </div>
      </div>
      <div
        class="emotion-25"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render canonical navigation on a URL not associated with navigation items 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-6::-webkit-scrollbar {
    display: none;
  }

  .emotion-6:focus-visible {
    outline: none;
  }

  .emotion-6:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }

  .emotion-6[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

.emotion-6.emotion-6::after {
  background: none;
}

.emotion-7 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    overflow: hidden;
  }
}

.emotion-8 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-8::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-9 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-9:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-9:focus::after,
.emotion-9:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-12 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-12 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-12 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-12:hover,
.emotion-12:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-12:hover::after,
.emotion-12:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-13 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-13 {
    fill: linkText;
  }
}

.emotion-15 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-16 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-16 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-17 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-18 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-18:last-child {
  border: 0;
}

.emotion-19 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-19 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-19:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-19:hover::before {
  opacity: 1;
}

.emotion-19:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-20 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-21.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-21 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-21::-webkit-scrollbar {
    display: none;
  }

  .emotion-21:focus-visible {
    outline: none;
  }

  .emotion-21:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-21::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-21::after {
      width: 6rem;
    }
  }

  .emotion-21[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-21 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-21 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-21 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-21 li:last-child:before {
  display: none;
}

.emotion-23 {
  position: relative;
}

.emotion-23::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-7"
                role="list"
              >
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-9"
                    href="/news"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-9"
                    href="/about"
                  >
                    About
                  </a>
                </li>
              </ul>
            </div>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-12"
              dir="ltr"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-13 emotion-14"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <span
                class="emotion-15"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-16"
            data-e2e="dropdown-nav"
            style="height: 0px;"
          >
            <ul
              class="emotion-17"
              role="list"
            >
              <li
                class="emotion-18"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-19"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-20"
        >
          <div
            class="emotion-21"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
          >
            <ul
              class="emotion-7"
              role="list"
            />
          </div>
        </div>
      </div>
      <div
        class="emotion-23"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render canonical navigation on non-home navigation page 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0 auto;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  position: relative;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-5::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-6.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-6 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-6::-webkit-scrollbar {
    display: none;
  }

  .emotion-6:focus-visible {
    outline: none;
  }

  .emotion-6:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-6::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-6::after {
      width: 6rem;
    }
  }

  .emotion-6[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-6 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-6 li a {
  color: #FFFFFF;
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li a:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: none;
  box-shadow: inset 0 0 0 0.1875rem #FFFFFF;
  outline: 0.125rem solid #000000;
  outline-offset: -0.125rem;
}

.emotion-6 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-6 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-6 li:last-child:before {
  display: none;
}

.emotion-6.emotion-6::after {
  background: none;
}

.emotion-7 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    overflow: hidden;
  }
}

.emotion-8 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

@media (min-width: 37.5rem) {
  .emotion-8::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 63.5rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-9 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-9:hover::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-9:focus::after,
.emotion-9:focus-visible::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.1875rem solid #000000;
}

.emotion-12::after {
  content: '';
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-13 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  position: relative;
  padding: 0;
  margin: 0;
  border: 0;
  float: inline-start;
  background-color: #B80000;
  color: #FFFFFF;
  width: 2.75rem;
  height: 2.75rem;
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-14 {
    width: 2.75rem;
    height: 2.75rem;
  }
}

.emotion-14 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-14:hover,
.emotion-14:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-14:hover::after,
.emotion-14:focus::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 0.25rem solid #000000;
}

.emotion-15 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-15 {
    fill: linkText;
  }
}

.emotion-18 {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  background-color: #FFFFFF;
  border-bottom: 0.1875rem solid #B80000;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-18 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-19 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-20 {
  padding: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-20:last-child {
  border: 0;
}

.emotion-21 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  position: relative;
  padding: 0.75rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-21:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21::before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-21:hover::before {
  opacity: 1;
}

.emotion-21:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-22 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-23.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-23 {
    position: relative;
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-23::-webkit-scrollbar {
    display: none;
  }

  .emotion-23:focus-visible {
    outline: none;
  }

  .emotion-23:focus-visible::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    outline: 0.1875rem solid #000000;
  }

  .emotion-23::after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    inset-inline-end: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(to right, transparent 0%, #FFFFFF 100%);
  }

  @media (min-width: 25rem) {
    .emotion-23::after {
      width: 6rem;
    }
  }

  .emotion-23[dir="rtl"]::after {
    background: linear-gradient(to left, transparent 0%, #FFFFFF 100%);
  }
}

.emotion-23 li {
  -webkit-margin-end: 0;
  margin-inline-end: 0;
}

.emotion-23 li a {
  padding: 0 0.5rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-23 li:before {
  content: "";
  position: absolute;
  inset-inline-end: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-23 li:last-child:before {
  display: none;
}

.emotion-25 {
  position: relative;
}

.emotion-25::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 100vw;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-6"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-7"
                role="list"
              >
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-9"
                    href="/news"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="emotion-8"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    aria-label="About"
                    class="focusIndicatorRemove emotion-9"
                    data-active="true"
                    href="/about"
                  >
                    <span
                      class="emotion-12"
                      id="NavigationLinks-About"
                      role="text"
                    >
                      <span
                        class="emotion-13"
                      >
                        Current page, 
                      </span>
                      About
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <button
              aria-expanded="false"
              aria-label="Sections"
              class="focusIndicatorRemove emotion-14"
              dir="ltr"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-15 emotion-16"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <span
                class="emotion-13"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-18"
            data-e2e="dropdown-nav"
            style="height: 0px;"
          >
            <ul
              class="emotion-19"
              role="list"
            >
              <li
                class="emotion-20"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-21"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-22"
        >
          <div
            class="emotion-23"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
          >
            <ul
              class="emotion-7"
              role="list"
            />
          </div>
        </div>
      </div>
      <div
        class="emotion-25"
      />
    </div>
  </nav>
</div>
`;
